--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
 @import "tailwindcss";
+
+@font-face {
+  font-family: "Righteous";
+  src: url("../public/assets/fonts/Righteous-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+  color: #002e2e;
+  overflow-x: hidden;
+  font-family: "Righteous", Tahoma, Geneva, Verdana, sans-serif;
+}
